# Flash

./: build.gradle.kts  gradle.properties  settings.gradle.kts
androidApp/: build.gradle.kts
androidApp/src/main/: AndroidManifest.xml
androidApp/src/main/kotlin/com/debanshu777/flash/: FlashApplication.kt  MainActivity.kt
composeApp/: build.gradle.kts
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/kotlin/com/debanshu777/caraml/: CaraMLApplication.kt  MainActivity.kt
composeApp/src/androidMain/kotlin/com/debanshu777/caraml/di/: HuggingFaceModule.android.kt
composeApp/src/androidMain/kotlin/com/debanshu777/caraml/platform/: PlatformPaths.android.kt
composeApp/src/androidMain/kotlin/com/debanshu777/caraml/storage/: Database.android.kt
composeApp/src/androidMain/kotlin/com/debanshu777/flash/: MainActivity.kt  Platform.android.kt
composeApp/src/androidMain/kotlin/com/debanshu777/flash/di/: HuggingFaceModule.android.kt
composeApp/src/androidMain/kotlin/com/debanshu777/flash/platform/: PlatformPaths.android.kt
composeApp/src/androidMain/kotlin/com/debanshu777/flash/storage/: Database.android.kt
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/commonMain/kotlin/com/debanshu777/caraml/: App.kt
composeApp/src/commonMain/kotlin/com/debanshu777/caraml/di/: AppModule.kt  HuggingFaceModule.kt  KoinInit.kt  ViewModelModule.kt
composeApp/src/commonMain/kotlin/com/debanshu777/caraml/platform/: PlatformPaths.kt
composeApp/src/commonMain/kotlin/com/debanshu777/caraml/storage/: AppDatabase.kt  DatabaseBuilder.kt  LocalModelDao.kt  LocalModelEntity.kt  LocalModelRepository.kt
composeApp/src/commonMain/kotlin/com/debanshu777/flash/: App.kt  Greeting.kt  Platform.kt
composeApp/src/commonMain/kotlin/com/debanshu777/flash/di/: AppModule.kt  HuggingFaceModule.kt  KoinInit.kt  ViewModelModule.kt
composeApp/src/commonMain/kotlin/com/debanshu777/flash/platform/: PlatformPaths.kt
composeApp/src/commonMain/kotlin/com/debanshu777/flash/storage/: AppDatabase.kt  DatabaseBuilder.kt  LocalModelDao.kt  LocalModelEntity.kt  LocalModelRepository.kt
composeApp/src/iosMain/kotlin/com/debanshu777/caraml/: MainViewController.kt
composeApp/src/iosMain/kotlin/com/debanshu777/caraml/di/: AppModule.ios.kt  HuggingFaceModule.ios.kt
composeApp/src/iosMain/kotlin/com/debanshu777/caraml/platform/: PlatformPaths.ios.kt
composeApp/src/iosMain/kotlin/com/debanshu777/caraml/storage/: Database.ios.kt
composeApp/src/iosMain/kotlin/com/debanshu777/flash/: MainViewController.kt  Platform.ios.kt
composeApp/src/iosMain/kotlin/com/debanshu777/flash/di/: HuggingFaceModule.ios.kt
composeApp/src/iosMain/kotlin/com/debanshu777/flash/platform/: PlatformPaths.ios.kt
composeApp/src/iosMain/kotlin/com/debanshu777/flash/storage/: Database.ios.kt
composeApp/src/jvmMain/kotlin/com/debanshu777/caraml/: main.kt
composeApp/src/jvmMain/kotlin/com/debanshu777/caraml/di/: HuggingFaceModule.jvm.kt
composeApp/src/jvmMain/kotlin/com/debanshu777/caraml/platform/: PlatformPaths.jvm.kt
composeApp/src/jvmMain/kotlin/com/debanshu777/flash/: Platform.jvm.kt  main.kt
composeApp/src/jvmMain/kotlin/com/debanshu777/flash/di/: HuggingFaceModule.jvm.kt
composeApp/src/jvmMain/kotlin/com/debanshu777/flash/platform/: PlatformPaths.jvm.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
huggingFaceManager/: build.gradle.kts
huggingFaceManager/src/androidMain/kotlin/com/debanshu777/huggingfacemanager/: HttpClientFactory.android.kt
huggingFaceManager/src/androidMain/kotlin/com/debanshu777/huggingfacemanager/download/: DownloadManager.android.kt  StoragePathProvider.android.kt
huggingFaceManager/src/commonMain/kotlin/com/debanshu777/huggingfacemanager/: HttpClientFactory.kt  HuggingFaceApi.kt
huggingFaceManager/src/commonMain/kotlin/com/debanshu777/huggingfacemanager/api/: ClientWrapper.kt  ListModelsParams.kt  RemoteHuggingFaceApiService.kt  SearchModelsParams.kt  SearchParams.kt
huggingFaceManager/src/commonMain/kotlin/com/debanshu777/huggingfacemanager/download/: DownloadManager.kt  DownloadMetadataDTO.kt  DownloadProgressDTO.kt  InsufficientStorageException.kt  StoragePathProvider.kt
huggingFaceManager/src/commonMain/kotlin/com/debanshu777/huggingfacemanager/model/: ListModelsResponse.kt  ModelDetailResponse.kt  ModelFileTreeResponse.kt  ModelSort.kt  ParameterRange.kt  PipelineTag.kt  SearchModelsResponse.kt  SearchResponse.kt
huggingFaceManager/src/commonMain/kotlin/com/debanshu777/huggingfacemanager/repository/: HuggingFaceRepository.kt
huggingFaceManager/src/commonMain/kotlin/com/debanshu777/huggingfacemanager/usecase/: GetModelDetailUseCase.kt  GetModelFileTreeUseCase.kt  ListModelsUseCase.kt  SearchModelsUseCase.kt
huggingFaceManager/src/iosMain/kotlin/com/debanshu777/huggingfacemanager/: HttpClientFactory.ios.kt
huggingFaceManager/src/iosMain/kotlin/com/debanshu777/huggingfacemanager/download/: DownloadManager.ios.kt  (+1 more)
huggingFaceManager/src/jvmMain/kotlin/com/debanshu777/huggingfacemanager/: HttpClientFactory.jvm.kt
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
runner/: build.gradle.kts
runner/cmake/llama-runner-desktop/: CMakeLists.txt
runner/src/androidMain/cpp/: CMakeLists.txt  llama_runner_jni.cpp
runner/src/androidMain/kotlin/com/debanshu777/runner/: LlamaRunner.android.kt
runner/src/commonCpp/: LlamaRunnerCommon.cmake  llama_runner_core.cpp  llama_runner_core.h  llama_runner_jni.cpp
runner/src/commonMain/kotlin/com/debanshu777/runner/: LlamaRunner.kt  LlamaRunnerValidation.kt  NativeRunnerConfig.kt  StopReason.kt
runner/src/iosMain/c_interop/: llama_runner.def
runner/src/iosMain/cpp/: CMakeLists.txt  llama_runner.cpp  llama_runner.def
runner/src/iosMain/kotlin/com/debanshu777/runner/: LlamaRunner.ios.kt
runner/src/iosMain/native/: CMakeLists.txt  llama_runner.h  llama_runner.mm
runner/src/jvmMain/cpp/: CMakeLists.txt  llama_runner_jni_desktop.cpp
runner/src/jvmMain/kotlin/com/debanshu777/runner/: LlamaRunner.jvm.kt
(+91 files in other folders)
